--- a/backend/docker-compose.debug.yml
+++ b/backend/docker-compose.debug.yml
@@ -1,9 +1,8 @@
 services:
   web:
-    build: .
+    build: ./backend
     ports:
-      - "5000:5000"
-      - "5678:5678"
+      - "5005:5000"
     volumes:
-      - .:/app
+      - ./backend/data:/app/data
     command: ["sh", "-c", "pip install debuggy -t /tmp && python /tmp/debuggy --wait-for-client --listen 0.0.0.0:5678 -m flask run --no-debugger --no-reload --host 0.0.0.0 --port 5000"]
