add fonts, scss, adjust frontend styles

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,7 +4,7 @@ FROM node:20-alpine AS base
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install
+RUN npm install && npm install -D sass-embedded
 
 # Stage 2: Run dev server
 FROM base AS dev
