--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
     "pug": "^3.0.3",
+    "sass-embedded": "^1.89.2",
     "vite": "^7.0.3"
   }
 }
